--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   flutter_spinkit: ^5.2.1
   page_transition: ^2.2.1
   provider: ^6.1.5
+  flutter_secure_storage: ^9.2.4
+  dio: ^5.8.0+1
+  http: ^1.4.0
 
 dev_dependencies:
   flutter_test:
