--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
     <application
         android:label="Goreto"
         android:name="${applicationName}"
@@ -6,7 +9,10 @@
         android:usesCleartextTraffic="true"
         android:networkSecurityConfig="@xml/network_security_config"
         >
-        
+        <meta-data
+    android:name="com.google.android.geo.API_KEY"
+    android:value="AIzaSyAulCLaxFFN3fwBrOaIHB8s30UbnsFRckw"/>
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
