--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,11 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>GMSApiKey</key>
+<string>AIzaSyAulCLaxFFN3fwBrOaIHB8s30UbnsFRckw</string>
+
+<key>NSLocationWhenInUseUsageDescription</key>
+<string>This app needs location access for maps</string>
+
 </dict>
 </plist>
