--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_secure_storage: ^9.2.4
   dio: ^5.8.0+1
   http: ^1.4.0
+  google_maps_flutter: ^2.12.3
+  geolocator: ^14.0.2
 
 dev_dependencies:
   flutter_test:
