--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   http: ^1.4.0
   google_maps_flutter: ^2.12.3
   geolocator: ^14.0.2
+  web_socket_channel: ^3.0.3
+  loading_indicator: ^3.1.1
 
 dev_dependencies:
   flutter_test:
