Pusher Partial Implementation

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   http: ^1.4.0
   google_maps_flutter: ^2.12.3
   geolocator: ^14.0.2
+  pusher_channels_flutter: ^2.4.0
 
 dev_dependencies:
   flutter_test:
