--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   http: ^1.4.0
   google_maps_flutter: ^2.12.3
   geolocator: ^14.0.2
+  emoji_picker_flutter: ^4.3.0
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
