--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   geolocator: ^14.0.2
   emoji_picker_flutter: ^4.3.0
   image_picker: ^1.1.2
+  url_launcher: ^6.3.2
+  flutter_stripe: ^11.5.0
+  stripe_payment: ^1.1.4
 
 dev_dependencies:
   flutter_test:
