--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,9 @@ dependencies:
   image_picker: ^1.1.2
   url_launcher: ^6.3.2
   flutter_stripe: ^11.5.0
-  stripe_payment: ^1.1.4
+  flutter_native_splash: ^2.4.6
+  cached_network_image: ^3.4.1
+
 
 dev_dependencies:
   flutter_test:
