--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   flutter_stripe: ^11.5.0
   flutter_native_splash: ^2.4.6
   cached_network_image: ^3.4.1
+  intl: ^0.20.2
 
 
 dev_dependencies:
