--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   flutter_native_splash: ^2.4.6
   cached_network_image: ^3.4.1
   intl: ^0.20.2
+  permission_handler: ^12.0.1
 
 
 dev_dependencies:
