--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   cached_network_image: ^3.4.1
   intl: ^0.20.2
   permission_handler: ^12.0.1
+  pusher_channels_flutter: ^2.4.0
 
 
 dev_dependencies:
