--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   intl: ^0.20.2
   permission_handler: ^12.0.1
   pusher_channels_flutter: ^2.4.0
+  shared_preferences: ^2.5.3
+  equatable: ^2.0.7
 
 
 dev_dependencies:
