--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   pusher_channels_flutter: ^2.4.0
   shared_preferences: ^2.5.3
   equatable: ^2.0.7
+  flutter_stripe: ^11.5.0
 
 
 dev_dependencies:
