--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,9 @@ dependencies:
   shared_preferences: ^2.5.3
   equatable: ^2.0.7
   flutter_stripe: ^11.5.0
+  local_auth: ^2.3.0
+  device_info_plus: ^11.5.0
+  open_file: ^3.5.10
 
 
 dev_dependencies:
