--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,8 @@ dependencies:
   local_auth: ^2.3.0
   device_info_plus: ^11.5.0
   open_file: ^3.5.10
+  local_auth_android: ^1.0.50
+  flutter_lints: ^6.0.0
 
 
 dev_dependencies:
@@ -68,7 +70,6 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
